output/methods/jacksonDatabind_tests/com/fasterxml/jackson/failing/TestExternalTypeId.java
@JsonCreator [EOL] public Point(@JsonProperty("v") Object v) { [EOL]     this.v = v; [EOL] } <line_num>: 57,60
@JsonCreator [EOL] private Pojo(@JsonProperty("p") int p) { [EOL]     this.p = p; [EOL] } <line_num>: 71,74
@SuppressWarnings("unused") [EOL] public void testTypes() throws IOException { [EOL]     final ObjectMapper mapper = new ObjectMapper(); [EOL]     mapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false); [EOL]     final Point _date = new Point(new Date()); [EOL]     final Point _integer = new Point(12231321); [EOL]     final Point _boolean = new Point(Boolean.TRUE); [EOL]     final Point _long = new Point(1234L); [EOL]     final Point _pojo = new Point(new Pojo(1)); [EOL]     final String s_date = mapper.writeValueAsString(_date); [EOL]     final String s_integer = mapper.writeValueAsString(_integer); [EOL]     System.err.println("Int -> " + s_integer); [EOL]     final String s_boolean = mapper.writeValueAsString(_boolean); [EOL]     final String s_long = mapper.writeValueAsString(_long); [EOL]     final String s_pojo = mapper.writeValueAsString(_pojo); [EOL]     final Point d_date = mapper.readValue(s_date, Point.class); [EOL]     final Point d_long = mapper.readValue(s_long, Point.class); [EOL]     final Point d_pojo = mapper.readValue(s_pojo, Point.class); [EOL]     final Point d_integer = mapper.readValue(s_integer, Point.class); [EOL]     final Point d_boolean = mapper.readValue(s_boolean, Point.class); [EOL] } <line_num>: 11,36
public Object getValue() { [EOL]     return v; [EOL] } <line_num>: 62,64
